# Scraping

./: .env.example  .gitignore  README.md  README_AR.md  launcher.bat  pyproject.toml  requirements.txt  run.sh  setup.bat  setup.sh
.github/workflows/: autopilot.yml  ci.yml
config/: autopilot.yaml  categories.yaml  filters.yaml  scoring.yaml  segments.yaml  sources.yaml
docs/: AUTOPILOT_SETUP.md  PROJECT_OVERVIEW_AR.md  WHATSAPP_MANUAL_AR.md
scripts/: egydir_spike.py  smoke.py  sprint_report.py
src/aol_leadfinder/: __init__.py  autopilot.py  config.py  logging_setup.py
tests/: test_autopilot_segments.py  test_crawler.py  test_crm.py  test_dedup.py  test_enrichment_fields.py  test_export.py  test_extraction.py  test_filters.py  test_google_maps.py  test_http_pool_cache.py  test_http_retry.py  test_intelligence.py  test_merge_strategy.py  test_normalize.py  test_orchestrator_concurrency.py  test_orchestrator_quarantine.py  test_quarantine.py  test_run_source_stats.py  test_score.py  test_score_bands.py  test_scrape_aece.py  test_scrape_egydir.py  test_scrape_forwarding.py  test_scrape_freightclub.py  test_scrape_textile_council.py  test_scrape_wsdconnect.py  test_scrape_yellowpages.py  test_segment.py  test_sheets_append.py  test_sqlite_stability.py  test_validate.py
tests/fixtures/: aece_detail.html  aece_directory.html  egydir_sample.html  forwardingcompanies_sample.html  freightclub_sample.html  textile_council_detail.html  textile_council_members.html  wsdconnect_detail.html  wsdconnect_listing.html  yellowpages_eg_listing.html
(+40 files in other folders)
