[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aol-leadfinder"
version = "0.1.0"
description = "Air Ocean Lead Finder — compliant B2B lead generation tool for Air Ocean Line"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel>=0.0.16",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "phonenumbers>=8.13",
    "PyYAML>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "streamlit>=1.36",
]

[project.optional-dependencies]
scraping = ["playwright>=1.44", "playwright-stealth>=1.0.6"]
sheets = ["gspread>=6.0", "google-auth>=2.30"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
